server/7.2/search/create-search-indexes.md
---
title: Create a Search Index
description: Create a Search index to get started with the Search Service in your database.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbaselabs/docs-devex/edit/release/7.2/modules/search/pages/create-search-indexes.adoc
  xref: xref:7.2@server:search:create-search-indexes.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.2/search/create-search-indexes.html)

# Create a Search Index

> Create a Search index to get started with the Search Service in your database. 

You can create a Search index with:

* The [Couchbase Server Web Console](#ui).
* The [Search Service REST API](#api).

> [!TIP]
> If you're new to developing with the Search Service, [create a Search index with the UI](create-search-index-ui.md). You can copy the Search index definition JSON payload from the UI to create your index [with the REST API](create-search-index-rest-api.md).

## [](#ui)Creating a Search Index with the Web Console

To [create a basic Search index](create-search-index-ui.md), provide the following information:

* The name of the index.
* The bucket where you want to create the index.

If you want to restrict the documents you add to an index, you can also:

* [Create a Type Mapping](create-type-mapping.md).
* [Add child fields](create-child-field.md) to add or remove document fields from the index.

After you create a Search index, the Search Service streams data from your chosen collection or collections, and any document mutations, into the index builder. Before your index finishes building, you can run a search and return partial results.

You can also customize a Search index to improve search results and performance. For more information about how you can customize a Search index with the Web Console, see [Customize a Search Index with the Web Console](customize-index.md).

### [](#creating-a-search-index-with-the-quick-editor)Creating a Search Index with the Quick Editor

The Web Console also has a Quick Index editor.

You can use the Quick Index editor to create a Search index by selecting fields from a document from your database.

You can edit an index that you created with the Quick Index editor in the standard editor later. You can't edit an index that you created with the standard editor in the Quick Index editor.

For more information about how to create an index with the Quick Index editor, see [Create a Search Index with the Quick Editor](create-quick-index.md).

## [](#api)Creating a Search Index with the REST API

You can create a Search index with the REST API through a JSON payload. Most properties in the JSON payload correspond to settings in the Web Console. You can also copy the Search index definition JSON payload from a Search index in the Web Console to use in a REST API call.

For more information about how to use the REST API to create a Search index, see [Create a Search Index with the REST API and curl/HTTP](create-search-index-rest-api.md).

For more information about the available properties for a Search index, see [Search Index JSON Properties](search-index-params.md).